chore: modernize \n- replace tslint with biome for linting and formatting- update dependencies- bump node version

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -7,7 +7,7 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "types": ["node", "jest", "@types/jest"],
+    "types": ["node", "jest"],
     "skipLibCheck": true,
     "lib": ["ES2020", "DOM"],
     "typeRoots": ["./node_modules/@types"]
