--- a/_emulator/firebase.json
+++ b/_emulator/firebase.json
@@ -12,6 +12,9 @@
     "hosting": {
       "port": 8081
     },
+    "functions": {
+      "port": 5001
+    },
     "storage": {
       "port": 9199
     },
